# PluginFinal

./: CMakeLists.txt  Library.cpp  Library.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md
.cache/clangd/index/: AlternateSet.hh.14FC04A7DF8A7881.idx  AlternateSubst.hh.64FAA1E8E7F34507.idx  AlternateSubstFormat1.hh.6FF5865A5852B778.idx  Anchor.hh.D642674D475CAB41.idx  AnchorFormat1.hh.EF6DF9712F25A56B.idx  AnchorFormat2.hh.16B01093F55CA3B8.idx  AnchorFormat3.hh.370F2492CC003672.idx  AnchorMatrix.hh.D631DB664CD2DABC.idx  BidiChain.c.0CC90397CCC4E073.idx  BidiChain.h.E224376F726153FD.idx  BidiTypeLookup.c.EBA16DADD604B486.idx  BidiTypeLookup.h.F4600BB866A82949.idx  BracketQueue.c.758663F4F7CA6E8B.idx  BracketQueue.h.7EAE8B768AE207DF.idx  BracketType.h.EA8D61D43849203B.idx  CBDT.hh.7E92DD1C3CF6001D.idx  COLR.hh.46C423CBAF79EEBA.idx  CPAL.hh.9764AB556A1480E4.idx  ChainContextPos.hh.9BDCFACDB870A80F.idx  ChainContextSubst.hh.638C00CB41F9E7FD.idx  Common.hh.6F511EC231711943.idx  Common.hh.C714494BBC364458.idx  CompositeGlyph.hh.D661EC9B9022561E.idx  ContextPos.hh.FEE85BBB51B7B461.idx  ContextSubst.hh.FCB6DEA6FFEAE78A.idx  Coverage.hh.C3E2830F738B462F.idx  CoverageFormat1.hh.02A3046A0528A3E8.idx  CoverageFormat2.hh.1F5BD5EC9855907C.idx  CursivePos.hh.645AB87FE825A36B.idx  CursivePosFormat1.hh.50119EE26A95858E.idx  ExtensionPos.hh.9E50BAE287CCF5E3.idx  ExtensionSubst.hh.07C89990604C85B1.idx  GDEF.hh.5AA4BC51DCE7AD49.idx  GPOS.hh.B4EF18D643B33403.idx  GSUB.hh.21C9462A070DE1A7.idx  GeneralCategoryLookup.c.C0A29D378F4C6C87.idx  (+1745 more)
pip/: CMakeLists.txt
